# rust-chat

./: .gitignore  Cargo.toml  README.md
app/: chat.css  chat.html  chat.js  elm.json
app/src/: chat.elm
elm/: chat.html  chat.js
elm/src/: chat.elm
src/: chatserv.rs  frame.rs  main.rs
src/client/: client.rs  frame.rs  http_parser.rs  mod.rs
src/server/: mod.rs  server.rs
