[package]
name = "chat"
version = "0.1.0"
authors = ["Pierre Gergis <pierre.s.gergis@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = { git = "https://github.com/BurntSushi/byteorder" }
mio = "0.5"
# mio = { git = "https://github.com/carllerche/mio" }
http-muncher = "0.2.0"
rustc-serialize = "0.3.15"
sha1 = "0.1.1"